solc_mutator_ossfuzz_seed_corpus/test_sol/test_71983a6408ce94000f9ec87d1b78f96954202b305d6f6c5fcdfe3558623eda97_8f728a9f019e46ca97b20b069c38ae8c4a00d4b1_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma solidity >= 0.0.0;
library L0 {
  function f0(function (bool, bytes30, int200) external   i0,int120[2][2] memory i1) public    returns(bool o0)
  {
  }
  function f1() external    returns(address o0,bool o1)
  {
  }
  function f2() public    returns(bool[] memory o0)
  {
    int120 l0 = int120(0);
    assembly
    {
      o0 := o0
      for 
      { let yulinit0 := 0 } lt(yulinit0, mod(o0, 11)) { yulinit0 := add(yulinit0, 1) }
      {
        for 
        {
          calldatacopy(add(0x80, mod(mload(add(0x80, mod(l0, 2048))), 1024)), 62058241738640647154833611597372811827646948913983288457292557739008979949419, mod(o0, 1024))
        }
        mload(add(0x80, mod(mload(add(0x80, mod(l0, 2048))), 1024)))
        {
          sstore(o0, mload(add(0x80, mod(mload(add(0x80, mod(l0, 2048))), 1024))))
          o0 := 0
          for 
          { let yulinit1 := 0 } lt(yulinit1, mod(43724028240005125490936761425988640774558873716883506492751660800650546314036, 11)) { yulinit1 := add(yulinit1, 1) }
          {
            stop()
          }
        }
        {
          switch o0
          case 115792089237316195423570985008687907853269984665640564039457584007913129639935
          {
            let al0 := 0
            for 
            {
              let al1 := o0
            }
            sload(al0)
            {
            }
            {
              o0 := 107940914733216888534713174229990839054990708335511306948523081534559307943329
              continue
            }
            let al2 := 0
          }
          case 0
          {
            let al3 := eq(115792089237316195423570985008687907853269984665640564039457584007913129639935, 115792089237316195423570985008687907853269984665640564039457584007913129639935)
            returndatacopy(add(0x80, mod(al3, 1024)), o0, mod(sub(sload(25174935715766027242185202012171530212233549035834877614124892899378925394103), 0), 1024))
            return(0, and(o0, 0))
          }
          sstore(115792089237316195423570985008687907853269984665640564039457584007913129639935, 24953702909391308171648852486681725938281172691046257164008354095030724208672)
          continue
        }
        return(keccak256(add(0x80, mod(al3, 1024)), 0), mload(add(0x80, mod(al3, 1024))))
      }
      switch mload(add(0x80, mod(calldataload(mod(0, calldatasize())), 2048)))
      case 47418074278948318212897259972486785522554704075906486058176339879774556143331
      {
        if l0
        {
        }
        function af0() -> ao0, ao1, ao2, ao3, ao4, ao5, ao6, ao7, ao8, ao9, ao10, ao11, ao12, ao13, ao14
        {
          let al4 := ao11
          if ao4
          {
          }
          ao6 := sload(36132285538750783635014916763929891303766017499177660226824064641592442457194)
        }
      }
    }
  }
}
// ----
// DeclarationError 8198: (su0.sol:2242-2245): Identifier "al3" not found.
// DeclarationError 8198: (su0.sol:2205-2208): Identifier "al3" not found.
